# Robot_Description_Generator

./: .cmake-format  .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/workflows/: build_and_test.yml  build_and_test_humble.yml
.obj-x86_64-linux-gnu/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  urdf_expansion
.obj-x86_64-linux-gnu/ament_cmake_core/: package.cmake  urdf_expansionConfig.cmake
.obj-x86_64-linux-gnu/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
.obj-x86_64-linux-gnu/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
config/: example_cmake.txt  example_ros.launch  urdf_solid.urdf
config/input/: solid3_macro.xacro  solid3_property.xacro
config/output/: joint_limits.yaml  robot_macro.xacro
config/solid3_description/: CMakeLists.txt  package.xml
config/solid3_description/launch/: solid3_description.launch  solid3_description.launch.py
config/solid3_description/urdf/: solid3_macro.xacro
config/solid3_description/urdf/inc/: solid3_property.xacro
debian/: changelog  control  copyright  files  ros-humble-urdf-expansion.substvars  rules
debian/.debhelper/ros-humble-urdf-expansion/: dbgsym-build-ids
debian/.debhelper/ros-humble-urdf-expansion/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/ros-humble-urdf-expansion/dbgsym-root/usr/share/doc/: ros-humble-urdf-expansion-dbgsym
debian/ros-humble-urdf-expansion/DEBIAN/: control  md5sums
debian/ros-humble-urdf-expansion/opt/ros/humble/lib/urdf_expansion/: urdf_expansion
debian/ros-humble-urdf-expansion/opt/ros/humble/share/ament_index/resource_index/package_run_dependencies/: urdf_expansion
debian/ros-humble-urdf-expansion/opt/ros/humble/share/urdf_expansion/: package.xml
debian/ros-humble-urdf-expansion/opt/ros/humble/share/urdf_expansion/cmake/: urdf_expansionConfig.cmake
debian/ros-humble-urdf-expansion/opt/ros/humble/share/urdf_expansion/config/: example_cmake.txt  example_package.xml  example_ros2.launch.py
example/BU015X/: CMakeLists.txt  package.xml
example/BU015X/config/: joint_names_BU015X.yaml
example/BU015X/launch/: display.launch  gazebo.launch
example/BU015X/meshes/: link4.STL  link6.STL  link7.STL
example/BU015X/urdf/: BU015X.csv  BU015X.urdf
example/BU015X/urdf/BU015X_description/: CMakeLists.txt  package.xml
example/BU015X/urdf/BU015X_description/config/: link_mass.yaml
example/BU015X/urdf/BU015X_description/launch/: BU015X_description.launch
example/BU015X/urdf/BU015X_description/meshes/collision/: link1.STL
example/BU015X/urdf/BU015X_description/meshes/visual/: link5.STL
example/BU015X/urdf/BU015X_description/urdf/: BU015X.urdf.xacro  BU015X_macro.xacro
example/BU015X_description/: CMakeLists.txt
example/BU015X_description/config/: joint_limits.yaml
example/BU015X_description/launch/: BU015X_description.launch.py
example/BU015X_description/meshes/collision/: base_link.STL  link3.STL
example/BU015X_description/meshes/visual/: link2.STL
example/BU015X_description/urdf/inc/: BU015X_property.xacro
include/generate_robot_urdf/: generate_robot_urdf.hpp
include/robot_description_generator/: robot_description_generator.hpp
include/urdf_expansion/: urdf_expansion.hpp
src/: description_generator_node.cpp  generate_robot_urdf.cpp  robot_description_generator.cpp  urdf_expansion.cpp
test/: robot_description_generator_test.cpp
test/config/: simple_test.urdf
