<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_description_generator</name>
  <version>0.0.2</version>
  <description>robot_description_generator</description>
  <maintainer email="v.eliseev@rtc.ru">eliseev</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>urdf</depend>
  <depend>urdfdom_headers</depend>
  <depend>urdfdom</depend>

  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>

  <test_depend condition="$ROS_VERSION == 1">rostest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>